# menu-studio

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  KNOWN-ISSUES.md  README.md  THIRD-PARTY-NOTICES.md  vcpkg.json
cmake/: x64-windows-static-md.cmake
fomod/: ModuleConfig.xml  info.xml
nexus/: DESCRIPTION.bbcode
src/: ActorTickProbe.cpp  ActorTickProbe.h  AnimEventProbe.cpp  AnimEventProbe.h  Backdrop.cpp  Backdrop.h  BackdropAnchorPolicy.h  BackdropManifest.cpp  BackdropManifest.h  BackdropPacks.cpp  BackdropPacks.h  BackdropPolicy.h  Bubble.cpp  Bubble.h  CameraCollisionPolicy.h  CameraGate.cpp  CameraGate.h  CbpcDrive.cpp  CbpcDrive.h  ClipProbe.cpp  ClipProbe.h  Declutter.cpp  Declutter.h  EquipNotifyGate.cpp  EquipNotifyGate.h  EquipSoundMute.h  FaceNeutral.cpp  FaceNeutral.h  FootIkGate.cpp  FootIkGate.h  ForcePause.cpp  ForcePause.h  FsmpDrive.cpp  FsmpDrive.h  MenuAnimationHoldPolicy.h  MenuInputGate.cpp  MenuInputGate.h  MovementArmPolicy.h  Offsets.h  OwnView.cpp  (+23 more)
tests/: backdrop_anchor_policy_test.cpp  backdrop_manifest_test.cpp  camera_collision_policy_test.cpp  equip_sound_mute_test.cpp  menu_animation_hold_policy_test.cpp  movement_arm_policy_test.cpp  weapon_preview_gate_test.cpp  weapon_pump_policy_test.cpp
tools/: aebuild.bat  bsa_list.py  build.bat  make_fomod.sh  make_voidshell.py  package.sh
